# Banana

./: CLR(1).cpp  CMakeLists.txt  FirstandFollow.cpp  KeywordScanner.cpp  LL1parser.cpp  Lexical Analyser.cpp  OperatorPrecedenceParser.cpp  RecursiveDescentParser.cpp  myshell.c  shiftreduce.cpp  test.cpp
output/: input.txt
